# hs-gopalan-iclp05

./: README.md  gopalan-iclp05.cabal  stack.yaml
src/: Main.hs  Syntax.hs
