name: gopalan-iclp05
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/gopalan-iclp05#readme
category: Web
author: Author name here
extra-source-files:
    README.md

executable gopalan-iclp05
    main-is: Main.hs
    build-depends:
        base >=4.7 && <5,
        unbound -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Syntax
